--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     ],
     "scripts": {
         "start": "tsc --watch",
-        "compile": "tsc",
+        "compile": "rm -rf ./dist/ && tsc",
+        "prepare": "npm run test && npm run compile",
         "test": "mocha --require ts-node/register --require tsconfig-paths/register --timeout 60000 -R spec 'tests/**/*.test.ts'"
     },
     "devDependencies": {
         "@types/chai": "^4.2.22",
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.10.9",
+        "@types/sinon": "^10.0.4",
         "chai": "^4.3.4",
         "mocha": "^9.1.2",
+        "sinon": "^11.1.2",
         "ts-node": "^10.3.0",
         "tsconfig-paths": "^3.11.0",
         "typescript": "^4.4.4"
